# uwsgi-rust

./: .gitignore  Cargo.toml  README.md  plugin.rs  rust.c  uwsgiplugin.py
examples/: Cargo.toml  app.rs
