[package]

name = "uwsgi_rust"
version = "0.0.1-dev"
authors = ["Unbit s.a.s"]
license = "MIT"
repository = "https://github.com/unbit/uwsgi-rust"
description = """
uWSGI and Rust integration plugin. 
"""

[lib]
crate-type = ["staticlib"]
name = "uwsgi_rust"
path = "plugin.rs"

[dependencies]
libc = "0.1"
dylib = "0.0.1"
